samples/_failures_safe/1761618855_9814f1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2f63bd32.c: In function ‘main’:
./samples/SAFE/__tmp_2f63bd32.c:143:16: error: missing terminating " character
  143 |         printf("No ERROR entries found
      |                ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_2f63bd32.c:143:9: error: expected expression at end of input
  143 |         printf("No ERROR entries found
      |         ^~~~~~
./samples/SAFE/__tmp_2f63bd32.c:143:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2f63bd32.c:143:9: error: expected declaration or statement at end of input
